# eigenda-client-rs

./: Cargo.toml
.github/workflows/: eigenda-signers-release.yaml  eigenda-v1-crate-release.yaml  eigenda-v2-common-release.yaml  eigenda-v2-crate-release.yaml  rust.yml
crates/rust-eigenda-client/src/: client.rs  client_tests.rs  errors.rs  lib.rs  sdk.rs
crates/rust-eigenda-signers/: Cargo.toml
crates/rust-eigenda-signers/src/: lib.rs  message.rs  public_key.rs  recovery_id.rs  secret_key.rs  signature.rs  signers.rs
crates/rust-eigenda-signers/src/signers/: ethers.rs  private_key.rs
crates/rust-eigenda-v2-client/: Cargo.toml
crates/rust-eigenda-v2-client/src/: accountant.rs  cert_verifier.rs  commitment_utils.rs  contracts_bindings.rs  core.rs  disperser_client.rs  errors.rs  eth_client.rs  lib.rs  payload_disperser.rs  prover.rs  relay_client.rs  relay_registry.rs  retrieval_client.rs  tests.rs  utils.rs  verifier.rs
crates/rust-eigenda-v2-client/src/core/: blob.rs  blob_header.rs  blob_key.rs  blob_request_signer.rs  eigenda_cert.rs  encoded_payload.rs  payload.rs  payment.rs  payment_metadata.rs
crates/rust-eigenda-v2-client/src/payloadretrieval/: relay_payload_retriever.rs
crates/rust-eigenda-v2-common/: Cargo.toml  README.md
crates/rust-eigenda-v2-common/src/: commitment_utils.rs  core.rs  eigenda_cert.rs  errors.rs  lib.rs  utils.rs
crates/rust-eigenda-v2-common/src/core/: blob.rs  encoded_payload.rs  payload.rs
src/: blob_info.rs  client.rs  client_tests.rs  config.rs  errors.rs  eth_client.rs  lib.rs  merkle_proof_input.rs  sdk.rs  verifier.rs  verifier_tests.rs
