[package]
# This is named with the rust- prefix to match https://github.com/Layr-Labs/rust-kzg-bn254
# We will remove the prefix and publish as new crates once we combine all of these repos
# and move them into the eigenda monorepo.
name = "rust-eigenda-v2-common"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Layr-Labs/eigenda-client-rs"
description = "EigenDA Common"
license = "MIT OR Apache-2.0"

[dependencies]
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-poly = { workspace = true }
serde = { workspace = true }
ark-serialize = { workspace = true }
rust-kzg-bn254-primitives = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
